[package]
name = "quick-start"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# execute = "0.2.11"
# bindings = { path = "bindings" }
# windows = "0.9.1"
serde_json = "1.0"

[dependencies.serde]  # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0"

[build-dependencies]
static_vcruntime = "2.0"
